@@ -411,6 +411,6 @@ div.generic_parent-hist {
     font-weight: bold;
 }
 
-.trackVerticalPositionIndicator {
+.wigglePositionIndicator {
     background: #999;
 }
